Fixes div overlapping change pwd issue

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -170,7 +170,7 @@ p {
 }
 .baby-size-img {
   padding-top: 35px;
-  width: 35%;
+  width: 37%;
   display: none;
   margin: auto;
   height: auto;
